--- a/ArbiRupee/.env
+++ b/ArbiRupee/.env
@@ -8,3 +8,6 @@ ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
 
 # API Keys (Optional)
 WALLETCONNECT_PROJECT_ID=your_project_id
+
+RAZORPAY_KEY_ID=rzp_test_RJjvHArNd8wRHG
+RAZORPAY_KEY_SECRET=sIsWrLw8ZRvU8HCmZXXNiVcy
