--- a/ArbiRupee/backend/config/development.env
+++ b/ArbiRupee/backend/config/development.env
@@ -16,10 +16,10 @@ ARBITRUM_SEPOLIA_RPC_URL=https://sepolia-rollup.arbitrum.io/rpc
 ARBINR_CONTRACT_ADDRESS=0x01f5ad6db84a292148f61f9553c780cf7d86bea9
 PRIVATE_KEY=8601e35fafccd9db2b4d17a9df4b0757ec6bb3686c7
 
-# Payment Gateway Configuration (Test keys)
-RAZORPAY_KEY_ID=rzp_test_RJjvHArNd8wRHG
-RAZORPAY_KEY_SECRET=sIsWrLw8ZRvU8HCmZXXNiVcy
-RAZORPAY_WEBHOOK_SECRET=your_webhook_secret
+# Payment Gateway Configuration (Stripe Test keys)
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
 
 # JWT Configuration
 JWT_SECRET=your_super_secure_jwt_secret_key_here
