--- a/ArbiRupee/backend/package.json
+++ b/ArbiRupee/backend/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
