--- a/ArbiRupee/package.json
+++ b/ArbiRupee/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@openzeppelin/contracts": "^5.4.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -35,7 +36,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "hardhat": "^3.0.6",
+    "hardhat": "^2.26.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
